--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-    <p>
+    <p style="padding-left: 5rem;padding-top: 1.2rem;background-color:grey; width: 100vw; height:10vh; position:absolute;left:0;">
        Created by Vishal Mhatre - Copyright's {{getCurrentYear}}
     </p>
 </footer>
