--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,12 @@
+<style>
+    h1 {
+        font-size: 50px;
+        word-break: break-all;
+    }
+</style>
 <h1>{{pageTitle}}</h1>
 <p>
     <a href="/">Home</a>
     <a href="/about">About</a>
+    <a href="/projects">Projects</a>
 </p>
