--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Some Webpage</title>
-    </head>
-    <body>
-         {{> header}}
+
+<head>
+    <meta charset="utf-8">
+    <title>Some Webpage</title>
+  {{> styleProp}}
+</head>
+<body>
+    <div class="main">
+        {{> header}}
+        <hr>
         <h3>{{screamIt welcomeMsg}}</h3>
         {{> footer}}
-    </body>
+    </div>
+</body>
+
 </html>
